--- a/templates/default/index.html.erb
+++ b/templates/default/index.html.erb
@@ -1,12 +1,8 @@
 <html>
 <body>
 <pre><code>
-This site was set up by <%= node['hostname'] %>
-My network addresses are:
-<% node['network']['interfaces'].keys.each do |iface_name| %>
-  * <%= iface_name %>: 
-      <%= node['network']['interfaces'][iface_name]['addresses'].keys[1] %>
-<% end %>
+This site was set up by <%= node['mywebserver']['user'] %>
+My Fully Qualified Domain Name is <%= node['fqdn'] %>
 </code></pre>
 </body>
 </html>
